--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 
 <section class="container text-center  ">
 
-  <div class="row   ">
+  <div class="row ">
 
     <div class="col-12 col-md-6 col-lg-4  mb-4">
     <div class="card" style="width: 23.75rem;">
       <img src="./Image/2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Python Programming</h5>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consectetur accusantium.</p>
         <a href="#" class="btn btn-primary">Know More</a>
       </div>
@@ -79,7 +79,7 @@
     <div class="card" style="width: 23.75rem;">
       <img src="./Image/2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Data Science and MachineLearning </h5>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consectetur accusantium.</p>
         <a href="#" class="btn btn-primary">Know More</a>
       </div>
@@ -90,42 +90,7 @@
     <div class="card" style="width: 23.75rem;">
       <img src="./Image/2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consectetur accusantium.</p>
-        <a href="#" class="btn btn-primary">Know More</a>
-      </div>
-    </div>
-  </div>
-
-
-    <div class="col-12 col-md-6 col-lg-4  mb-4">
-    <div class="card" style="width: 23.75rem;">
-      <img src="./Image/2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consectetur accusantium.</p>
-        <a href="#" class="btn btn-primary">Know More</a>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="col-12 col-md-6 col-lg-4 mb-4">
-    <div class="card" style="width: 23.75rem;">
-      <img src="./Image/2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consectetur accusantium.</p>
-        <a href="#" class="btn btn-primary">Know More</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-12 col-md-6 col-lg-4 mb-4">
-    <div class="card" style="width: 23.75rem;">
-      <img src="./Image/2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Android Devolopment using Kotlin </h5>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consectetur accusantium.</p>
         <a href="#" class="btn btn-primary">Know More</a>
       </div>
@@ -137,7 +102,42 @@
     <div class="card" style="width: 23.75rem;">
       <img src="./Image/2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Full Stack Web Developing </h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consectetur accusantium.</p>
+        <a href="#" class="btn btn-primary">Know More</a>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="col-12 col-md-6 col-lg-4 mb-4">
+    <div class="card" style="width: 23.75rem;">
+      <img src="./Image/2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Core Java Programming</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consectetur accusantium.</p>
+        <a href="#" class="btn btn-primary">Know More</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-12 col-md-6 col-lg-4 mb-4">
+    <div class="card" style="width: 23.75rem;">
+      <img src="./Image/2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">React Native Developing </h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consectetur accusantium.</p>
+        <a href="#" class="btn btn-primary">Know More</a>
+      </div>
+    </div>
+  </div>
+
+
+    <div class="col-12 col-md-6 col-lg-4  mb-4">
+    <div class="card" style="width: 23.75rem;">
+      <img src="./Image/2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"> Software <Testing-br> Manual and Automation</Testing-br></h5>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam consectetur accusantium.</p>
         <a href="#" class="btn btn-primary">Know More</a>
       </div>
